<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:src="@drawable/logo2"
                android:layout_gravity="bottom"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="Log In"
                android:layout_marginLeft="35dp"
                android:textSize="25dp"
                android:textColor="@color/colorPrimary"
                app:fontFamily="@font/montserrat_bold" />

        </LinearLayout>





    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txtuserftyname"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/roundtextfeild2"
            android:drawablePadding="20dp"
            android:hint="@string/txtusername"
            android:inputType="textEmailAddress"
            android:paddingBottom="12dp"
            android:paddingLeft="20dp"
            android:paddingTop="12dp" />

        <EditText
            android:id="@+id/txtusername"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/roundtextfeild2"
            android:drawablePadding="20dp"
            android:hint="@string/txtpassword"
            android:inputType="textPassword"
            android:paddingBottom="12dp"
            android:paddingLeft="20dp"
            android:paddingTop="12dp" />

        <Button
            android:id="@+id/btnLoginz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/roundbtn2"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/btnLogin"
            android:textColor="#fff"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="15dp" />

        <android.support.v4.widget.Space
            android:layout_width="wrap_content"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent">
                <Button
                    android:id="@+id/btnForgotPassword"
                    android:gravity="left|center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/nobackgroundbtn"
                    android:text="@string/ForgotYourPassword"
                    android:textColor="@color/colorPrimary" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent">
                <Button
                    android:id="@+id/btnSignup"
                    android:gravity="right|center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/nobackgroundbtn"
                    android:text="@string/btnSignUp"
                    android:textColor="@color/colorPrimary" />

            </LinearLayout>






        </LinearLayout>









    </LinearLayout>

</LinearLayout>