<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txtuserftyname"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_magnifying_glass"
            android:background="@drawable/roundtextfeild3"
            android:drawablePadding="20dp"
            android:hint="@string/txtSearchByLocation"
            android:inputType="text"
            android:paddingBottom="12dp"
            android:paddingLeft="8dp"
            android:paddingTop="12dp" />

        <EditText
            android:id="@+id/txtuserftyn54ame"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_door"
            android:background="@drawable/roundtextfeild3"
            android:hint="@string/txtSearchByLocation"
            android:drawablePadding="20dp"
            android:inputType="number"
            android:paddingBottom="12dp"
            android:paddingLeft="8dp"
            android:paddingTop="12dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal"
            android:layout_marginRight="25dp"
            android:orientation="horizontal">


            <CheckBox
                android:id="@+id/checkMale"
                android:layout_marginRight="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtmale"
                android:textColor="@color/hint"
                android:buttonTint="@color/colorPrimary"
                android:checked="true"/>

            <CheckBox
                android:id="@+id/checkFemghale"
                android:layout_marginRight="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtmale"
                android:textColor="@color/hint"
                android:buttonTint="@color/colorPrimary"/>

            <CheckBox
                android:id="@+id/checkFemale"
                android:layout_marginRight="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtfemale"
                android:textColor="@color/hint"
                android:buttonTint="@color/colorPrimary"/>


        </LinearLayout>




        <Button
            android:id="@+id/btnLoginz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/roundbtn2"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/btnSearch"
            android:textColor="#fff"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="20dp"/>



    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="10dp">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginLeft="15dp"
                    android:layout_gravity="center|left"
                    android:src="@drawable/rooomimage"/>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Dr. Manjula Prasad"
                    android:fontFamily="@font/montserrat_bold"
                    android:textSize="20dp"
                    android:paddingLeft="100dp"
                    android:paddingTop="15dp"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Colon and  Rectal Surgery"
                    android:fontFamily="@font/montserrat"
                    android:textSize="15dp"
                    android:paddingLeft="100dp"
                    android:paddingTop="40dp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Nawaloka Hospital"
                    android:fontFamily="@font/montserrat"
                    android:textSize="15dp"
                    android:paddingLeft="100dp"
                    android:paddingTop="60dp"
                    />





            </android.support.v7.widget.CardView>

        </LinearLayout>


    </ScrollView>

</LinearLayout>